# cloudopti

./: .gitignore  BILL_BASED_DISCOVERY.md  CONTRIBUTING.md  ENHANCEMENTS.md  GITHUB_SETUP.md  INSTALL.md  LICENSE  MANIFEST.in  PUBLISH.md  QUICKSTART.md  QUICK_START_GITHUB.md  README.md  prepare_for_github.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  test.yml
cloudopti/: __init__.py  aws_cost_monitor.py  cli.py  cloudwatch_metrics.py  comprehensive_metrics.py  cost_mapper.py  display.py  enhanced_recommendations.py  excel_exporter.py  instance_analyzer.py  recommendations.py  resource_discovery.py  service_mapper.py
